# lemonpos

dataAccess/: azahar.cpp
database_resources/: CMakeLists.txt  fix_0.9.5.1.sql  fix_0.9.6.1_Finestra.sql
squeeze/src/: main.cpp  producteditor.cpp  producteditor.h  providerseditor.cpp  purchaseeditor.cpp  squeeze.cpp  squeezeview.cpp  squeezeview.h
squeeze/src/po/: ca.po  cz.po  de.po  es.po  fr.po  pt_BR.po  squeeze.pot  zh.po
squeeze/src/ui/: producteditor.ui  squeezeview_base.ui
src/: lemon.cpp  lemonview.cpp  lemonview.h  main.cpp  productdelegate.cpp  saleqtydelegate.cpp  structs.h
src/po/: ca.po  cz.po  de.po  es.po  fr.po  lemon.pot  zh.po
src/ui/: mainview.ui
