install( FILES
         lemon_mysql.sql
         lemon_mysql_real.sql
         fix_0.9.5.1.sql
         fix_0.9.5.0.sql
         fix_0.9.4rc8.sql
         fix_0.9.3rc.sql
         fix_0.9.3.sql
         fix_0.9.2.sql
         fix_0.9.sql
         fix_roles.sql
         mexico_taxes.sql
         README
         README-TAXMODELS
        DESTINATION  ${DATA_INSTALL_DIR}/lemon/ )
